--- a/OpenVidSum/Views/Home/Index.cshtml
+++ b/OpenVidSum/Views/Home/Index.cshtml
@@ -4,17 +4,16 @@
 
     <form class="form-inline" asp-action="Index" method="post">
         <div class="input-group">
-            <input class="form-control form-control-lg" name="videoLink" type="text" placeholder="Enter YouTube Video URL...">
+            <input class="form-control form-control-lg" name="videoLink" type="text" value="@ViewData["VideoLink"]" placeholder="Enter YouTube Video URL...">
             <button type="submit" class="btn btn-primary">Summarize</button>
         </div>
     </form>
 
+
     @{
         if (ViewData.ContainsKey("SummarizedText"))
-        {
-            <div>
-                <p>@ViewData["SummarizedText"]</p>
-            </div>
+        {<h1>Summary</h1>
+            <p>@ViewData["SummarizedText"]</p>
         }
     }
 </div>
