--- a/OpenVidSum/Views/Home/Index.cshtml
+++ b/OpenVidSum/Views/Home/Index.cshtml
@@ -4,15 +4,22 @@
 
     <form class="form-inline" asp-action="Index" method="post">
         <div class="input-group">
-            <input class="form-control form-control-lg" name="videoLink" type="text" value="@ViewData["VideoLink"]" placeholder="Enter YouTube Video URL...">
+            <input class="form-control form-control-lg" name="videoLink" type="text" value="@(ViewData["Response"] is ResponseViewModel ? ((ResponseViewModel)ViewData["Response"]).VideoLink : "")" placeholder="Enter YouTube Video URL...">
             <button type="submit" class="btn btn-primary">Summarize</button>
         </div>
     </form>
 
-    @{
-        if (ViewData.ContainsKey("SummarizedText"))
-        {<h1>Summary</h1>
-            <p>@ViewData["SummarizedText"]</p>
+    <div class="mt-3">
+        @{
+        if (ViewData.ContainsKey("Response"))
+        {
+            <h2>Summary</h2>
+            @foreach (string response in (ViewData["Response"] as ResponseViewModel).Responses)
+            {
+                <p>@response</p>
+            }
         }
     }
+    </div>
+    
 </div>
